<resources>
    <string name="app_name">Ejercicio2</string>
    <string name="tcPostre">Postre</string>
    <string name="tcCarne">Carnes y Aves</string>
    <string name="tcEnsalada">Ensalada</string>
    <string name="tcPescado">Pescados y Mariscos</string>
    <string name="tcBebida">Bebidas</string>
    <string name="lblReceta">Receta</string>
    <string name="lblTiempo">Tiempo de preparación</string>
    <string name="lblTipo">Tipo de comida</string>
    <string name="lblPorciones">Porciones</string>
    <string name="lblDificultad">Dificultad</string>
    <string name="lblBaja">Baja</string>
    <string name="lblMedia">Media</string>
    <string name="lblAlta">Alta</string>
    <string name="dfTiempo">00:00</string>
    <string name="errReceta">Ingresa el nombre de la receta</string>
    <string name="errTiempo">Ingresa un tiempo válido</string>
    <string name="errPorcion">Ingresa cantidad de porciones</string>
    <string name="errDificultad">Selecciona una dificultad</string>
    <string name="error">Llena todos los campos</string>
    <string name="msjID">Seleccionaste la receta con ID: \</string>
    <string name="msjAgregado">Receta registrada. Total de recetas: \</string>
    <string name="lblRecetario">Mis Recetas</string>
    <string name="lblRegistro">Registrar</string>
    <string name="lblAutor">Humberto Serafín Castillo López</string>
    <string name="archivoDatos">recetario.dat</string>
    <string name="formatoTiempo">%02d:%02d</string>
</resources>